feat. sentry handler refactor. main function structure

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.2",
         "ixudra/curl": "^6.18",
         "laravel/lumen-framework": "^6.0",
-        "linecorp/line-bot-sdk": "^4.1"
+        "linecorp/line-bot-sdk": "^4.1",
+        "sentry/sentry-laravel": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
